creazione sezione portfolio responsive

--- a/index.html
+++ b/index.html
@@ -46,6 +46,41 @@
             </div>
         </div>
     </section>
-
+    <!-- sezione immagini
+         cellulare -> singola
+         tablet -> doppia
+         desktop -> tripla -->
+    <section class="ms_portfolio">
+        <!-- row h1  -->
+        <div class="row align-items-center justify-content-center">
+            QUESTO è UN TITOLO
+        </div>
+        <!-- row separatore -->
+        <div class="row align-items-center justify-content-center">
+            ----*----
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="ms_item"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="ms_item"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="ms_item"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="ms_item"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="ms_item"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="ms_item"></div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
