creazione sezione about

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Prove Bootstrap</title>
@@ -78,6 +79,40 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="ms_item"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- sezione about
+    smartphone -> singola
+    tablet -> doppia -->
+    <section class="ms_about">
+        <!-- row h1 -->
+        <div class="row align-items-center justify-content-center">
+            QUESTO è UN TITOLO
+        </div>
+        <!-- row separatore -->
+        <div class="row align-items-center justify-content-center">
+            ----*----
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <div class="ms_about-text">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error dolores dolorum obcaecati, nam inventore molestias illo atque maiores
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="ms_about-text">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error dolores dolorum obcaecati, nam inventore molestias illo atque maiores
+                    </div>
+                </div>
+            </div>
+            <div class="row align-items-center justify-content-center">
+                <div class="ms_bottone align-items-center justify-content-center">
+                    <button class="ms_download offset-5 col-2 align-items-center justify-content-center">
+                        <i class="fa-solid fa-download"></i> Download
+                    </button>
                 </div>
             </div>
         </div>
