--- a/index.html
+++ b/index.html
@@ -117,5 +117,57 @@
             </div>
         </div>
     </section>
+    <!-- sezione contact -->
+    <section class="ms_contact">
+                <!-- row h1 -->
+        <div class="row align-items-center justify-content-center">
+            QUESTO è UN TITOLO
+        </div>
+                <!-- row separatore -->
+        <div class="row align-items-center justify-content-center">
+                    ----*----
+        </div>
+        <div class="container">
+            <form>
+                <div class="mb-3">
+                    <label for="exampleInputName1" class="form-label"></label>
+                    <input type="name" placeholder="Name" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label"></label>
+                    <input type="email" placeholder="Email Address" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputPhone1" class="form-label"></label>
+                    <input type="phone" placeholder="Phone Number" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputMessage1" class="form-label"></label>
+                    <input type="text" placeholder="Message" class="form-control">
+                </div>
+                <button class="ms_button-contact">Send</button>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-4 text-center">
+                    <h5>LOCATION</h5>
+                    <p>2215 John David Drive Clark</p>
+                    <p>MO 54243</p>
+                </div>
+                <div class="col-12 col-md-4 text-center">
+                    <h5>AROUND THE WEB</h5>
+
+                </div>
+                <div class="col-12 col-md-4 text-center">
+                    <h5>ABOUT FREELANCER</h5>
+                    <p>Freelance is a free to use, open source Bootstrap theme created by <a href="#">Start Bootstrap</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
