--- a/index.html
+++ b/index.html
@@ -12,38 +12,63 @@
 <body>
     <!-- Header -->
     <header>
-        <div class="container text-center ms_container_header">
-            <div class="row align-items-center justify-content-between ms_row_header">
-                <div class="col-4 text-start">
-                  START BOOTSTRAP
+        <nav class="navbar navbar-expand-md">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link" href="#">PORTFOLIO</a>
+                  <a class="nav-link" href="#">ABOUT</a>
+                  <a class="nav-link" href="#">CONTACT</a>
                 </div>
-                <div class="col-4 text-end">
-                  MENU
-                </div>
-            </div> 
-        </div>
+              </div>
+            </div>
+          </nav>
     </header>
+    <!-- Jumbotron -->
     <section class="ms_start">
         <div class="container text-center">
             <!-- row immagine -->
             <div class="row align-items-center justify-content-center">
-                <div class="col-6">
-                    <div class="ms_item">
-
+                <div class="col-8 my-5">
+                    <div>
+                        <img src="img/avatar.svg" alt="">
                     </div>
                 </div>
             </div>
             <!-- row h1  -->
             <div class="row align-items-center justify-content-center">
-                QUESTO è UN TITOLO
+                <h1>START BOOTSTRAP</h1>
             </div>
             <!-- row separatore -->
-            <div class="row align-items-center justify-content-center">
-                ----*----
+            <div class="row align-items-center justify-content-center my-4 ms_separatore">
+                <div class="col-5 mx-0 px-0">
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                </div>
+                <div class="col-2 mx-0 px-0">
+                    <i class="fa-solid fa-star"></i>
+                </div>
+                <div class="col-5 mx-0 px-0">
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                </div>
+                
             </div>
             <!-- row descrizione -->
             <div class="row align-items-center justify-content-center">
-                QUESTA è UNA DESCRIZIONE
+                <h6>
+                    GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR
+                </h6>
             </div>
         </div>
     </section>
@@ -52,33 +77,52 @@
          tablet -> doppia
          desktop -> tripla -->
     <section class="ms_portfolio">
-        <!-- row h1  -->
-        <div class="row align-items-center justify-content-center">
-            QUESTO è UN TITOLO
-        </div>
-        <!-- row separatore -->
-        <div class="row align-items-center justify-content-center">
-            ----*----
-        </div>
         <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="ms_item"></div>
+            <div class="row align-items-center justify-content-center text-center">
+                <h2>PORTFOLIO</h2>
+            </div>
+            <!-- row separatore -->
+            <!-- row separatore -->
+            <div class="row align-items-center justify-content-center my-4 ms_separatore">
+                <div class="col-5 mx-0 px-0">
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="ms_item"></div>
+                <div class="col-2 mx-0 px-0">
+                    <i class="fa-solid fa-star"></i>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="ms_item"></div>
+                <div class="col-5 mx-0 px-0">
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="ms_item"></div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="ms_item"></div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="ms_item"></div>
+                
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="ms_item"></div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="ms_item"></div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="ms_item"></div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="ms_item"></div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="ms_item"></div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="ms_item"></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -169,5 +213,8 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  </body>
+
 </body>
 </html>
