--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="collapse navbar-collapse  justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                   <a class="nav-link" href="#">PORTFOLIO</a>
                   <a class="nav-link" href="#">ABOUT</a>
@@ -33,7 +33,7 @@
         <div class="container text-center">
             <!-- row immagine -->
             <div class="row align-items-center justify-content-center">
-                <div class="col-8 my-5">
+                <div class="col-6 my-5">
                     <div>
                         <img src="img/avatar.svg" alt="">
                     </div>
@@ -66,7 +66,7 @@
             </div>
             <!-- row descrizione -->
             <div class="row align-items-center justify-content-center">
-                <h6>
+                <h6 class="my-5">
                     GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR
                 </h6>
             </div>
@@ -78,12 +78,12 @@
          desktop -> tripla -->
     <section class="ms_portfolio">
         <div class="container">
-            <div class="row align-items-center justify-content-center text-center">
-                <h2>PORTFOLIO</h2>
+            <div id="ms_separatore" class="row align-items-center justify-content-center text-center">
+                <h2 class="ms_black my-5">PORTFOLIO</h2>
             </div>
             <!-- row separatore -->
             <!-- row separatore -->
-            <div class="row align-items-center justify-content-center my-4 ms_separatore">
+            <div class="row align-items-center justify-content-center text-center my-4 ms_separatore_black">
                 <div class="col-5 mx-0 px-0">
                     <i class="fa-solid fa-minus"></i>
                     <i class="fa-solid fa-minus"></i>
@@ -106,22 +106,34 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="ms_item"></div>
+                        <div class="my-4">
+                            <img src="img/cabin.png" alt="">
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="ms_item"></div>
+                        <div class="my-4">
+                            <img src="img/cake.png" alt="">
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="ms_item"></div>
+                        <div class="my-4">
+                            <img src="img/circus.png" alt="">
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="ms_item"></div>
+                        <div class="my-4">
+                            <img src="img/game.png" alt="">
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="ms_item"></div>
+                        <div class="my-4">
+                            <img src="img/safe.png" alt="">
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="ms_item"></div>
+                        <div class="my-4">
+                            <img src="img/submarine.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -131,34 +143,54 @@
     smartphone -> singola
     tablet -> doppia -->
     <section class="ms_about">
-        <!-- row h1 -->
-        <div class="row align-items-center justify-content-center">
-            QUESTO è UN TITOLO
-        </div>
-        <!-- row separatore -->
-        <div class="row align-items-center justify-content-center">
-            ----*----
-        </div>
         <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <div class="ms_about-text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error dolores dolorum obcaecati, nam inventore molestias illo atque maiores
+            <!-- row h1 -->
+            <div class="row align-items-center justify-content-center text-center">
+                <h2 class="ms_white">
+                    ABOUT
+                </h2>
+            </div>
+            <!-- row separatore -->
+            <div class="row align-items-center justify-content-center text-center my-4 ms_separatore">
+                <div class="col-5 mx-0 px-0">
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                </div>
+                <div class="col-2 text-center mx-0 px-0">
+                    <i class="fa-solid fa-star"></i>
+                </div>
+                <div class="col-5 text-center mx-0 px-0">
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                </div>
+                
+            </div>
+            
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="ms_about-text my-3 text-light">
+                            Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS and JavaScript as well as optional LESS stylesheet for easy costumization.
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="ms_about-text my-3 text-light">
+                            Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects this template is the perfect starting point!
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
-                    <div class="ms_about-text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error dolores dolorum obcaecati, nam inventore molestias illo atque maiores
+                <div class="row align-items-center justify-content-center">
+                    <div class="ms_bottone align-items-center justify-content-center">
+                        <button class="ms_download offset-5 col-2 align-items-center justify-content-center my-3">
+                            <i class="fa-solid fa-download"></i> Download
+                        </button>
                     </div>
                 </div>
-            </div>
-            <div class="row align-items-center justify-content-center">
-                <div class="ms_bottone align-items-center justify-content-center">
-                    <button class="ms_download offset-5 col-2 align-items-center justify-content-center">
-                        <i class="fa-solid fa-download"></i> Download
-                    </button>
-                </div>
-            </div>
         </div>
     </section>
     <!-- sezione contact -->
