--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="container">
             <!-- row h1 -->
             <div class="row align-items-center justify-content-center text-center">
-                <h2 class="ms_white">
+                <h2 class="ms_white mt-3">
                     ABOUT
                 </h2>
             </div>
@@ -196,18 +196,37 @@
     <!-- sezione contact -->
     <section class="ms_contact">
                 <!-- row h1 -->
-        <div class="row align-items-center justify-content-center">
-            QUESTO è UN TITOLO
-        </div>
-                <!-- row separatore -->
-        <div class="row align-items-center justify-content-center">
-                    ----*----
-        </div>
+            <div class="row align-items-center justify-content-center text-center">
+                <h2 class="ms_black mt-3">
+                    CONTACT ME
+                </h2>
+            </div>
+            <!-- row separatore -->
+            <div class="row align-items-center justify-content-center text-center my-4 ms_separatore_black">
+                <div class="col-5 mx-0 px-0">
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                </div>
+                <div class="col-2 text-center mx-0 px-0">
+                    <i class="fa-solid fa-star"></i>
+                </div>
+                <div class="col-5 text-center mx-0 px-0">
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                    <i class="fa-solid fa-minus"></i>
+                </div>
+                
+            </div>
         <div class="container">
             <form>
                 <div class="mb-3">
                     <label for="exampleInputName1" class="form-label"></label>
-                    <input type="name" placeholder="Name" class="form-control">
+                    <input type="name"  placeholder="Name" class="form-control">
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label"></label>
@@ -221,7 +240,7 @@
                     <label for="exampleInputMessage1" class="form-label"></label>
                     <input type="text" placeholder="Message" class="form-control">
                 </div>
-                <button class="ms_button-contact">Send</button>
+                <button class="mb-3 ms_button-contact">Send</button>
             </form>
         </div>
     </section>
@@ -230,13 +249,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-4 text-center">
-                    <h5>LOCATION</h5>
-                    <p>2215 John David Drive Clark</p>
-                    <p>MO 54243</p>
+                    <h5 class="mt-4">LOCATION</h5>
+                    <p>2215 John David Drive Clark, MO 54243</p>
                 </div>
                 <div class="col-12 col-md-4 text-center">
                     <h5>AROUND THE WEB</h5>
-
+                    <div class="row my-3">
+                        <div class="col-3"><i class="fa-brands fa-facebook" style="color: #fff;"></i></div>
+                        <div class="col-3"><i class="fa-brands fa-google-plus-g" style="color:#fff;"></i></div>
+                        <div class="col-3"><i class="fa-brands fa-twitter" style="color: #ffffff;"></i></div>
+                        <div class="col-3"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></div>
+                    </div>
                 </div>
                 <div class="col-12 col-md-4 text-center">
                     <h5>ABOUT FREELANCER</h5>
